# excit

./: .gitignore  .gitlab-ci.yml  .licenserc.yml  .repoquality  AUTHORS  Makefile.am  README.md  configure.ac  libexcit.pc.in
.github/workflows/: builds.yml  style.yml
src/: Makefile.am  composition.c  composition.h  cons.c  cons.h  excit.c  excit.h  hilbert2d.c  hilbert2d.h  index.c  index.h  loop.c  loop.h  prod.c  prod.h  range.c  range.h  repeat.c  repeat.h  slice.c  slice.h  tleaf.c  tleaf.h
src/dev/: excit.h
tests/: Makefile.am  excit.c  excit_composition.c  excit_cons.c  excit_hilbert2d.c  excit_index.c  excit_loop.c  excit_product.c  excit_range.c  excit_repeat.c  excit_slice.c  excit_test.c  excit_test.h  excit_tleaf.c
