AM_CFLAGS = -std=c99 -Wall -Wextra -Werror -pedantic

lib_LTLIBRARIES = libexcit.la

libexcit_la_SOURCES = excit.c \
		      dev/excit.h \
		      composition.c \
		      composition.h \
		      prod.c \
		      prod.h \
		      cons.c \
		      cons.h \
		      repeat.c \
		      repeat.h \
		      hilbert2d.c \
		      hilbert2d.h \
		      range.c \
		      range.h \
		      index.c \
		      index.h \
		      tleaf.c \
		      tleaf.h \
		      loop.c \
		      loop.h

include_HEADERS = excit.h
